--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,24 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python Debugger: Train.py with multihead attn",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/train.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--available_gpus", "0",
+                "--num_actors", "1",
+                "--algo_name", "IMPALANetwork_attention_multihead",
+                "--env_name", "meltingpot",
+                "--map_name", "predator_prey__open",
+            ],
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "1"
+            },
+            "justMyCode": false
+        },
+        {
             "name": "Python Debugger: Train.py with spatial attn",
             "type": "debugpy",
             "request": "launch",
@@ -10,7 +28,7 @@
             "args": [
                 "--available_gpus", "0",
                 "--num_actors", "1",
-                "--algo_name", "PopArtIMPALA_attention_spatial",
+                "--algo_name", "PopArtIMPALA_attention_item_aware",
                 "--env_name", "meltingpot",
                 "--map_name", "predator_prey__open",
             ],
