--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,60 @@
 {
     "version": "0.2.0",
     "configurations": [
+        {                          
+            "name": "Attn disturb",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/evaluate.py",
+            "console": "integratedTerminal",
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "5"
+            },
+            "args": [
+                "--available_gpus", "5",
+                "--num_actors", "16",
+                "--algo_name", "PopArtIMPALA_attention_multihead_disturb",
+                "--env_name", "meltingpot",
+                "--map_name", "coop_mining",
+                "--map_layout", "original",
+                "--experiment_dir", "results/PopArtIMPALA_attention_multihead_disturb_1_meltingpot_coop_mining_2025-06-26_18:40:32.248065",
+                "--agent_roles", "default,default,default",
+                "--dense_ore_regrow", "True",
+                "--iron_rate", "0.0001",
+                "--gold_rate", "0.00008",
+                "--conservative_mine_beam", "True",
+                "--iron_reward", "1",
+                "--gold_reward", "6",
+                "--mining_reward", "0",
+                "--ckp", "60",
+                "--n_episodes", "1",
+                "--record_video", "True",
+                "--positional_embedding", "learnable",
+                "--log_timesteps", "True",
+                "--agent_param_indices", "0,1,2",
+                "--log_obs", "True",
+                "--num_heads", "4",
+                "--disturb_heads", "0"
+            ]
+        },                                          
+        {
+            "name": "Attention_vis",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/marl/utils/visualize_attention.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--csv_path", "results/PopArtIMPALA_attention_multihead_1_meltingpot_coop_mining_2025-06-26_18:40:32.248065/csv_logs/coop_mining62-timesteps.csv",
+                "--image_dir", "data/PopArtIMPALA_attention_multihead_coop_mining_2025-06-26_18:40:32.248065_ckp62/agent_view_images",
+                "--save_dir", "data/PopArtIMPALA_attention_multihead_coop_mining_2025-06-26_18:40:32.248065_ckp62/attention_vis",
+                "--n_agents", "3",
+                "--n_heads", "4",
+            ],
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "1"
+            },
+            "justMyCode": false
+        },
         {
             "name": "Python Debugger: Train.py with multihead attn",
             "type": "debugpy",
@@ -38,6 +92,24 @@
                 "CUDA_VISIBLE_DEVICES": "1"
             },
             "justMyCode": false
+        },
+        {
+            "name": "Python Debugger: train coop_mining",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/train.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--available_gpus", "7",
+                "--num_actors", "1",
+                "--algo_name", "PopArtIMPALA",
+                "--env_name", "meltingpot",
+                "--map_name", "coop_mining",
+                "--log_obs", "true"
+            ],
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "7"
+            }
         },
         {
             "name": "Python Debugger: Train.py with Arguments",
@@ -93,26 +165,6 @@
             ],
             "env": {
                 "CUDA_VISIBLE_DEVICES": "0,1"
-            }
-        },
-        {
-            "name": "Python Debugger: train coop_mining",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${workspaceFolder}/train.py",
-            "console": "integratedTerminal",
-            "args": [
-                "--available_gpus", "0",
-                "--num_actors", "1",
-                "--algo_name", "PopArtIMPALA",
-                "--env_name", "meltingpot",
-                "--map_name", "coop_mining",
-                "--conservative_mine_beam", "true",
-                "--dense_ore_regrow", "true",
-                "--agent_roles", "default, default, default",
-            ],
-            "env": {
-                "CUDA_VISIBLE_DEVICES": "0"
             }
         },
         {
