implement scenario in testing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -238,6 +238,39 @@
               "--mining_reward", "0",
               "--ckp", "30",
             ],
+          },
+        {
+            "name": "eval_scenario",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "evaluate.py",
+            "console": "integratedTerminal",
+            "env": {
+              "CUDA_VISIBLE_DEVICES": "1",
+              "PYTHONPATH": "./gits/meltingpot:gits/acme:${PYTHONPATH}",
+              "LD_LIBRARY_PATH": "$LD_LIBRARY_PATH:/usr/local/cuda/lib64:/usr/local/lib:/home/kumquat/miniconda3/envs/marl-jax/lib",
+            },
+            "args": [
+              "--available_gpus", "1",
+              "--num_actors", "1",
+              "--algo_name", "PopArtIMPALA_attention_multihead_item_aware",
+              "--env_name", "meltingpot",
+              "--map_name", "coop_mining",
+              "--run_eval_on_scenarios", "True",
+              "--map_layout", "original",
+              "--max_episode_length", "500",
+              "--record_video", "True",
+              "--experiment_dir", "./results/PopArtIMPALA_attention_multihead_item_aware_1_meltingpot_coop_mining_2025-08-17_13:13:13.664194",
+              "--agent_roles", "default",
+              "--dense_ore_regrow", "True",
+              "--iron_rate", "0.0001",
+              "--gold_rate", "0.00008",
+              "--iron_reward", "1",
+              "--gold_reward", "6",
+              "--mining_reward", "0",
+              "--agent_param_indices", "0",
+              "--ckp", "25",
+            ],
           }
     ]
 }
