Update installation script

--- a/requirements.txt
+++ b/requirements.txt
@@ -60,8 +60,8 @@ importlib_metadata==8.5.0
 importlib_resources==6.4.5
 ipython==8.18.1
 ipywidgets==8.1.5
-jax==0.4.1
-jaxlib==0.4.1+cuda11.cudnn82
+jax[cuda11_cudnn82]==0.4.1
+-f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 jedi==0.19.1
 jmp==0.0.4
 jupyterlab_widgets==3.0.13
